--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "bootstrap": "^5.0.0-beta3",
     "date-fns": "^2.20.2",
     "gray-matter": "^4.0.2",
     "next": "^10.0.0",
